classify affected regions on public map
